fix kod ruta
